[project]
name = "px-utils"
version = "1.0.0.dev"
description = "Build utilities python projects"
license = { text = "MIT" }
authors = [{ name = "Houbie", email = "ivo@houbrechts-it.be" }]
readme = "README.md"
urls = { homepage = "https://github.com/pyprojectx/px-utils" }

keywords = ["build", "pyprojectx"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"

dependencies = []

[tool.pdm.build]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "tomlkit>=0.12.3",
]

[project.scripts]
pxmkdirs = "px_utils.cli:mkdirs"
pxcp = "px_utils.cli:cp"
pxmv = "px_utils.cli:mv"
pxrm = "px_utils.cli:rm"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["ISC001", "ANN", "FA", "FBT", "D100", "D102", "D103", "D104", "D105", "D213", "D203", "T201", "TRY003", "EM102", "COM812", "S602", "S603", "S604", "S605", "S607", "S324"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SLF001", "S101", "I001", "INP001"]
"bin/*" = ["INP001"]

[tool.pyprojectx]
[tool.pyprojectx.main]
requirements = [
    "pdm",
    "ruff",
    "pre-commit",
    "tomlkit",
    "px-utils",
]
post-install = "pre-commit install"

[tool.pyprojectx.aliases]
install = "pdm install"
update = "pdm update"
outdated = "pdm update --outdated"
clean = "pxrm .venv .pytest_cache dist .pdm-build .ruff_cache"
full-clean = ["@clean", "pxrm .pyprojectx"]
format = ["ruff format", "ruff check --select I --fix"]
lint = ["ruff check"]
test = "pdm run pytest tests"
check = ["@lint", "@test"]
build = ["@install", "@check", "pdm build", "@cli-help"]

# used in github actions:
publish = "pdm publish --username __token__"
